# Agentic-RAG

./: .gitignore  README.md  frontend.html  pyproject.toml  requirement.txt
apps/: main.py
apps/agent/: graph.py
apps/api/: schemas.py
apps/api/routes/: evaluate.py  ingest.py  query.py  sessions.py
apps/core/: config.py  prompts.py
apps/evaluation/: ragas_eval.py
apps/services/: chain.py  embeddings.py  ingestion.py  memory.py  reranker.py  retriever.py  vector_store.py
data/: chat_memory.db
data/vector_store/: chroma.sqlite3
data/vector_store/295e3877-1c37-432c-b248-185e0758ed4c/: index_metadata.pickle
